# OpenStackClient_Workspace

./: .coveragerc  .nosetests  .testr.conf  README.html  README.md  README.rst  commands.html  commands.rst  setup.cfg
tools/: hacking.sh
workspaceclient/common/: exceptions.py  httpclient.py  i18n.py  manager.py  parser_builder.py  parsetypes.py  utils.py
workspaceclient/osc/: plugin.py
workspaceclient/osc/v1/: antiddos.py  desktop.py  desktop_user.py  job.py  parser_builder.py  policy.py  product.py  workspace.py
workspaceclient/tests/: base.py  fakes.py
workspaceclient/tests/common/: test_display.py  test_exceptions.py  test_httpclient.py  test_manager.py  test_resource.py  test_utils.py
workspaceclient/tests/osc/: test_plugin.py
workspaceclient/tests/osc/v1/: test_antiddos.py  test_desktop.py  test_desktop_user.py  test_policy.py  test_product.py  test_workspace.py
workspaceclient/v1/: client.py  desktop_mgr.py  desktop_user_mgr.py  job_mgr.py  policy_mgr.py  product_mgr.py  resource.py  workspace_mgr.py
