[metadata]
name = python-workspaceclient
summary = Client Library for HuaWei OpenStack Customer API
description-file = README.rst
author = QianBiao Ng
author-email = xmufive@gmail.com
home-page = http://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = workspaceclient

[entry_points]

openstack.cli.extension =
    workspace = workspaceclient.osc.plugin

openstack.workspace.v1 =
    desktop_list = workspaceclient.osc.v1.desktop:ListDesktop
    desktop_detail_list = workspaceclient.osc.v1.desktop:ListDesktopDetail
    desktop_create = workspaceclient.osc.v1.desktop:CreateDesktop
    desktop_delete = workspaceclient.osc.v1.desktop:DeleteDesktop
    desktop_reboot = workspaceclient.osc.v1.desktop:RebootDesktop
    desktop_start = workspaceclient.osc.v1.desktop:StartDesktop
    desktop_stop = workspaceclient.osc.v1.desktop:StopDesktop
    desktop_edit = workspaceclient.osc.v1.desktop:EditDesktop
    desktop_show = workspaceclient.osc.v1.desktop:ShowDesktop

    desktop_user_list = workspaceclient.osc.v1.desktop_user:ListDesktopUser
    desktop_login_list = workspaceclient.osc.v1.desktop_user:ListLoginRecords

    workspace_enable = workspaceclient.osc.v1.workspace:EnableWorkspace
    workspace_show = workspaceclient.osc.v1.workspace:ShowWorkspace
    workspace_edit = workspaceclient.osc.v1.workspace:EditWorkspace
    workspace_disable = workspaceclient.osc.v1.workspace:DisableWorkspace

    workspace_policy_show = workspaceclient.osc.v1.policy:ShowPolicy
    workspace_policy_edit = workspaceclient.osc.v1.policy:EditPolicy

    workspace_product_list = workspaceclient.osc.v1.product:ListProduct


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
